--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "rC": "rollup -c"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/screepers/screeps-typescript-starter.git"
+    "url": "git+https://github.com/Val3ry-Gaius/Screeps-Typescript.git"
   },
   "author": "",
   "license": "MIT",
@@ -22,7 +23,7 @@
     "rollup-plugin-clean": "^1.0.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-screeps-upload": "git+https://github.com/ezolenko/rollup-plugin-screeps-upload.git#master",
+    "rollup-plugin-screeps-upload": "git+https://github.com/Val3ry-Gaius/Screeps-Typescript.git#master",
     "rollup-plugin-typescript2": "^0.8.1",
     "tslint": "^5.8.0",
     "typed-screeps": "^1.0.4",
